feature: adds full header

--- a/src/account-cart.html
+++ b/src/account-cart.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="account account--cart">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="account__wrapper uk-container bg-full-width--gradient">
     <div class="frame uk-flex uk-flex-column-reverse@s">
 
@@ -9,19 +9,19 @@
         <h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
         <ul class="account__list uk-flex uk-flex-between@l">
           <li>
-            <a href="#">Главная</a>
+            <a href="account-main.html">Главная</a>
           </li>
           <li class="active">
-            <a href="#">Мои товары</a>
+            <a href="">Мои товары</a>
           </li>
           <li>
-            <a href="#">Заказы</a>
+            <a href="account-orders.html">Заказы</a>
           </li>
           <li>
-            <a href="#">Кешбэк</a>
+            <a href="account-cashback.html">Кешбэк</a>
           </li>
           <li>
-            <a href="#">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+            <a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
           </li>
           <li class="uk-visible@l">
             <a class="account__logout" href="#">Выйти
