--- a/src/account-orders.html
+++ b/src/account-orders.html
@@ -1,27 +1,27 @@
 //= components/head.html
 
 <body class="account account--orders">
-	<!-- //= components/header.html -->
+	//= components/header.html
 	<div class="account__wrapper uk-container bg-full-width--gradient">
 		<div class="frame uk-flex uk-flex-column-reverse@s">
 
 			<div class="uk-width-expand@l">
 				<h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
 				<ul class="account__list uk-flex uk-flex-between@l">
+					<li>
+						<a href="account-main.html">Главная</a>
+					</li>
+					<li>
+						<a href="account-cart.html">Мои товары</a>
+					</li>
 					<li class="active">
-						<a href="#">Главная</a>
+						<a href="">Заказы</a>
 					</li>
 					<li>
-						<a href="#">Мои товары</a>
+						<a href="account-cashback.html">Кешбэк</a>
 					</li>
 					<li>
-						<a href="#">Заказы</a>
-					</li>
-					<li>
-						<a href="#">Кешбэк</a>
-					</li>
-					<li>
-						<a href="#">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+						<a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
 					</li>
 					<li class="uk-visible@l">
 						<a class="account__logout" href="#">Выйти
