--- a/src/articles.html
+++ b/src/articles.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="articles">
-  <!-- //= components/header.html -->
+  //= components/header.html
 
   <div class="articles__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
