--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="catalog">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="catalog__header uk-container bg-full-width--gradient">
     <div class="catalog__header-top uk-margin-bottom@l">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-bottom">
@@ -124,7 +124,7 @@
                     <label for="f8">SHARK</label>
                   </li>
                 </ul>
-                <button class="uk-margin-top" type="button"
+                <button class="filter__btn-see-all uk-margin-top" type="button"
                   data-uk-toggle="target: - .filter__checkbox; cls: filter__checkbox-full">Показать
                   еще</button>
               </div>
@@ -133,7 +133,7 @@
             <li class="uk-margin-small-bottom@l">
               <a class="uk-accordion-title" href="#">Объем памяти</a>
               <div class="uk-accordion-content">
-                <ul class="filter__memory uk-flex uk-flex-wrap uk-flex-middle uk-grid-small" data-uk-grid>
+                <ul class="filter__memory uk-flex uk-flex-between uk-flex-wrap uk-flex-middle">
                   <li>
                     <input class="uk-hidden" type="checkbox" id="m1" name="m1">
                     <label for="m1">64 Gb</label>
