--- a/src/checkout.html
+++ b/src/checkout.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="checkout">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div
     class="checkout__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame uk-flex uk-flex-column@s uk-child-width-1-2@l">
