--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="contacts">
-    <!-- //= components/header.html -->
+    //= components/header.html
   <div class="contacts__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
       <ul class="breadcrumbs uk-subnav uk-subnav-divider">
