--- a/src/product.html
+++ b/src/product.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="product">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="product__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-bottom@s">
     <div class="frame uk-flex uk-flex-column@s uk-flex-between@l">
       <div class="product__content uk-flex uk-flex-column uk-width-expand">
