--- a/src/return.html
+++ b/src/return.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="return">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="return__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame">
       <div class="return__top uk-text-center">
