--- a/src/reviews.html
+++ b/src/reviews.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="reviews">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="reviews__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
       <div class="reviews__header uk-flex uk-flex-between uk-flex-wrap">
