--- a/src/account-main.html
+++ b/src/account-main.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="account account--main">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="account__wrapper uk-container bg-full-width--gradient">
     <div class="frame uk-flex uk-flex-column-reverse@s">
 
@@ -9,25 +9,25 @@
         <h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
         <ul class="account__list uk-flex uk-flex-between@l">
           <li class="active">
-            <a href="#">Главная</a>
+            <a href="">Главная</a>
           </li>
           <li>
-            <a href="#">Мои товары</a>
+            <a href="account-cart.html">Мои товары</a>
           </li>
           <li>
-            <a href="#">Заказы</a>
+            <a href="account-orders.html">Заказы</a>
           </li>
           <li>
-            <a href="#">Кешбэк</a>
+            <a href="account-cashback.html">Кешбэк</a>
           </li>
           <li>
-            <a href="#">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
+            <a href="account-orders.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
           </li>
           <li class="uk-visible@l">
             <a class=" account__logout" href="#">Выйти
-            <svg width="20" height="20" fill="#FF548C">
-              <use xlink:href="img/symbol/sprite.svg#log-out" />
-            </svg>
+              <svg width="20" height="20" fill="#FF548C">
+                <use xlink:href="img/symbol/sprite.svg#log-out" />
+              </svg>
             </a>
           </li>
         </ul>
