--- a/src/article.html
+++ b/src/article.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="article">
-  <!-- //= components/header.html -->
+  //= components/header.html
 
   <div class="article__wrapper uk-container bg-full-width--gradient">
     <div class="frame">
