--- a/src/delivery.html
+++ b/src/delivery.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="delivery">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div class="delivery__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame">
       
