--- a/src/return-policy.html
+++ b/src/return-policy.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="return-policy">
-		<!-- //= components/header.html -->
+		//= components/header.html
 	<div class="return-policy__wrapper uk-container bg-full-width--gradient">
 		<div class="frame">
 			<div class="uk-width-1-2@l">
