--- a/src/warranty.html
+++ b/src/warranty.html
@@ -1,7 +1,7 @@
 //= components/head.html
 
 <body class="warranty">
-  <!-- //= components/header.html -->
+  //= components/header.html
   <div
     class="warranty__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame">
