--- a/src/product.html
+++ b/src/product.html
@@ -715,7 +715,7 @@
 
             <!-- right-section -->
             <div class="uk-width-1-4@l uk-padding-left@s uk-padding-right@s">
-              <button class="btn product__reviews-btn">Оставить отзыв</button>
+              <button type="button" class="btn reviews__btn-adds">Оставить отзыв</button>
               <div class="product__reviews-container">
                 <!-- Swiper -->
                 <div class="swiper-wrapper">
