fix: adds siper for page checkout, adds padding for list for page contacts and chages images for main banner small

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -3,7 +3,7 @@
 <body class="checkout">
   //= components/header.html
   <div
-    class="checkout__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
+    class="checkout__wrapper uk-container bg-full-width--gradient">
     <div class="frame uk-flex uk-flex-column@s uk-child-width-1-2@l">
       <div class="checkout__product-container">
         <h1 class="title title--medium uk-margin-bottom uk-padding-small-bottom@s">Корзина</h1>
@@ -116,8 +116,9 @@
         </ul>
 
         <span class="checkout__container-subtitle">Не забудьте добавить аксессуары:</span>
+        <!-- Swiper -->
         <div class="checkout__swiper">
-          <ul class="swiper-wrapper uk-child-width-1-2@l uk-grid-small" uk-grid>
+          <ul class="swiper-wrapper uk-child-width-1-2@l">
             <li class="swiper-slide">
               <div class="product-card product-card--accessories uk-flex">
                 <a class="product-card__image" href="#">
@@ -345,7 +346,7 @@
     </div>
   </div>
 
-  //= components/question.html
+  //= components/subscribe.html
   //= components/footer.html
 </body>
 //= components/bottom.html
