--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
     class="uk-container uk-child-width-1-2@l uk-flex uk-flex-column@x bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
     <!-- banner-1 -->
     <div class="banner banner--pink">
-      <img src="img/pic/ico/banner-pink-title.png" width="173" height="28" alt="">
+      <img src="img/pic/ico/banner-pink-title.svg" width="173" height="28" alt="">
       <p>В наличии и по лучшей цене</p>
       <a href="#">В каталог</a>
       <img src="img/pic/bg/banner-pink.png" width="311" height="171" alt="">
