feature: adds page producr-accessories

--- a/src/product-accessories.html
+++ b/src/product-accessories.html
@@ -57,9 +57,9 @@
               <!-- Swiper -->
               <div class="swiper-container gallery-thumbs">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
-                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
-                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery-small.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-mini-1.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-mini-2.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-mini-3.jpg)"></div>
                 </div>
                 <!-- Add Arrows -->
                 <!-- <div class="swiper-button-next"></div>
@@ -68,9 +68,9 @@
 
               <div class="swiper-container gallery-top">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide" style="background:url(./img/temp/product-gallery.jpg)"></div>
-                  <div class="swiper-slide" style="background:url(./img/temp/product-card-1.jpg)"></div>
-                  <div class="swiper-slide" style="background:url(./img/temp/product-card-2.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-1.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-1.jpg)"></div>
+                  <div class="swiper-slide" style="background:url(./img/temp/product-accessories-1.jpg)"></div>
                 </div>
               </div>
             </div>
@@ -78,32 +78,19 @@
           </div>
 
           <div class="product__frame">
-            <div class="product__container uk-flex uk-flex-column@s uk-child-width-1-2@l">
-              <div class="uk-flex uk-flex-column uk-margin-bottom@s">
-                <span class="checkout__container-title">Объем памяти</span>
-                <ul class="filter__memory uk-flex uk-flex-wrap uk-flex-middle uk-child-width-auto uk-child-width-1-3@s">
+            <div class="product__container">
+              <div class="uk-flex uk-flex-between uk-flex-middle uk-child-width-1-2">
+                <span class="checkout__container-title">Беспроводной кейс</span>
+                <ul class="filter__radio uk-flex uk-flex-middle uk-child-width-1-2">
                   <li>
                     <input class="uk-hidden" type="radio" id="m1" name="m1">
-                    <label for="m1">64 Gb</label>
+                    <label for="m1">Да</label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="radio" id="m2" name="m1" checked="">
-                    <label for="m2">256 Gb</label>
-                  </li>
-                  <li>
-                    <input class="uk-hidden" type="radio" id="m3" name="m1">
-                    <label for="m3">512 Gb</label>
+                    <label for="m2">Нет</label>
                   </li>
                 </ul>
-              </div>
-
-              <div class="uk-flex uk-flex-column uk-margin-left@l">
-                <span class="checkout__container-title">Цвет корпуса</span>
-                <select>
-                  <option data-image="img/pic/ico/circle-gold.svg" value="8">Золотой</option>
-                  <option data-image="img/pic/ico/circle-gold.svg" value="1">Серый</option>
-                  <option value="2">Чёрный</option>
-                </select>
               </div>
             </div>
 
@@ -149,32 +136,6 @@
                   </svg>
                   Оформить предзаказ</span>
               </button>
-            </div>
-
-            <div class="product__container product__container--present uk-text-center@l">
-              <span class="product__container-title uk-margin-bottom uk-padding-left@s">Выберите 2 подарка</span>
-              <ul class="product__present uk-flex">
-                <li class="checked uk-margin-right">
-                  <div>
-                    <span class="uk-margin-top uk-padding-small-top@l uk-padding-small-top@s">Чехол</span>
-                    <img src="img/temp/product-present-1.jpg" width="110" height="70" alt="">
-                  </div>
-                </li>
-
-                <li class="uk-margin-right">
-                  <div>
-                    <span class="uk-margin-top uk-padding-small-top@l uk-padding-small-top@s">Скидка</span>
-                    <img src="img/temp/product-present-2.jpg" width="68" height="60" alt="">
-                  </div>
-                </li>
-
-                <li>
-                  <div>
-                    <span class="uk-margin-top">Защитное стекло</span>
-                    <img src="img/temp/product-present-3.jpg" width="90" height="58" alt="">
-                  </div>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
