feature: adds seo-block

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="uk-container bg-full-width uk-padding-top@l">
+  <div class="uk-container bg-full-width uk-padding-top@l uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="catalog__content uk-flex uk-flex-column@s">
       <div class="uk-width-1-4@l uk-visible@l uk-margin-right@l">
         <button class="catalog__btn uk-margin-bottom uk-visible@l" type="button">Есть вопросы по модели?</button>
@@ -580,12 +580,11 @@
             </a>
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
 
+  //= components/seo.html
   //= components/subscribe.html
   //= components/footer.html
 </body>
