feature: adds seo block msk

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -585,6 +585,7 @@
   </div>
 
   //= components/seo.html
+  //= components/seo-msk.html
   //= components/subscribe.html
   //= components/footer.html
 </body>
