feature: adds new js, edits scss for product, base

--- a/src/index.html
+++ b/src/index.html
@@ -553,6 +553,7 @@
   </div>
 
   //= components/subscribe.html
+  //= components/subscribe-2.html
   //= components/footer.html
 </body>
 //= components/bottom.html
