--- a/src/reviews.html
+++ b/src/reviews.html
@@ -132,7 +132,7 @@
           <div class="uk-flex uk-flex-column uk-visible@l">
             <span class="checkout__container-title">Отзывы о модели:</span>
             <select>
-              <option data-image="img/temp/reviews-model-1.jpg" value="8">Apple iPhone XS Max</option>
+              <option data-image="img/temp/all-model.svg" value="8">Apple iPhone XS Max</option>
               <option data-image="img/temp/reviews-model-1.jpg" value="1">Apple iPhone XS Max</option>
               <option value="2">Apple iPhone XS Max</option>
             </select>
