feature: adds hover and popups for buttons

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -82,7 +82,7 @@
   <div class="uk-container bg-full-width uk-padding-top@l uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="catalog__content uk-flex uk-flex-column@s">
       <div class="uk-width-1-4@l uk-visible@l uk-margin-right@l">
-        <button class="catalog__btn uk-margin-bottom uk-visible@l" type="button">Есть вопросы по модели?</button>
+        <button class="catalog__btn uk-margin-bottom uk-visible@l" type="button" data-uk-toggle="target: #popupQuestion">Есть вопросы по модели?</button>
 
         <div class="filter uk-margin-large-bottom@l">
 
