--- a/src/checkout.html
+++ b/src/checkout.html
@@ -136,7 +136,7 @@
                       <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                     </div>
 
-                    <button class="btn" type="button">Добавить</button>
+                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                   </div>
                 </div>
               </div>
@@ -160,7 +160,7 @@
                       <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                     </div>
 
-                    <button class="btn" type="button">Добавить</button>
+                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                   </div>
                 </div>
               </div>
@@ -184,7 +184,7 @@
                       <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                     </div>
 
-                    <button class="btn" type="button">Добавить</button>
+                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                   </div>
                 </div>
               </div>
@@ -208,7 +208,7 @@
                       <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
                     </div>
 
-                    <button class="btn" type="button">Добавить</button>
+                    <button class="btn" type="button" data-uk-toggle="target: #popupCartAdd">Добавить</button>
                   </div>
                 </div>
               </div>
@@ -367,14 +367,15 @@
 
             <button class="btn checkout__btn uk-margin-bottom">Оформить заказ</button>
 
-            <div class="checkout__btn-credit uk-flex uk-flex-between uk-flex-middle">
+            <div class="checkout__btn-credit uk-flex uk-flex-between uk-flex-middle"
+              data-uk-toggle="target: #popupCredit">
               <span>Купить в кредит</span>
               <span>от&nbsp;1440&nbsp;&#8381 в&nbsp;месяц</span>
             </div>
           </div>
         </div>
 
-        <button class="btn checkout__btn-question">Остались вопросы?</button>
+        <button class="btn checkout__btn-question" data-uk-toggle="target: #popupQuestion">Остались вопросы?</button>
 
         <div class="checkout__contacts uk-flex uk-flex-column uk-flex-center uk-flex-middle">
           <span>или позвоните нам по номеру:</span>
