--- a/src/reviews.html
+++ b/src/reviews.html
@@ -13,7 +13,7 @@
         <div class="uk-flex uk-flex-between uk-flex-middle">
           <h1 class="title title--medium">Отзывы о покупке</h1>
           <div class="uk-width-1-4@l">
-            <button type="button" class="btn reviews__btn-adds position-right@s">Оставить отзыв</button>
+            <button type="button" class="btn reviews__btn-adds position-right@s" data-uk-toggle="target: #popupAddsReviews">Оставить отзыв</button>
           </div>
         </div>
 
