--- a/src/account-orders.html
+++ b/src/account-orders.html
@@ -48,7 +48,8 @@
 									<li>Оплата: наложенный платеж (при получении)</li>
 								</ul>
 								<div class="uk-flex uk-flex-between@s uk-flex-right@l uk-width-expand@s uk-width-1-3@l">
-									<button class="account__container-link" type="button">Написать отзыв</button>
+									<button class="account__container-link" type="button"
+										data-uk-toggle="target: #popupAddsReviews">Написать отзыв</button>
 									<span class="account__date">29 сентября 2019</span>
 								</div>
 							</div>
@@ -67,7 +68,8 @@
 									<li>Оплата: наложенный платеж (при получении)</li>
 								</ul>
 								<div class="uk-flex uk-flex-between@s uk-flex-right@l uk-width-expand@s uk-width-1-3@l">
-									<button class="account__container-link" type="button">Написать отзыв</button>
+									<button class="account__container-link" type="button"
+										data-uk-toggle="target: #popupAddsReviews">Написать отзыв</button>
 									<span class="account__date">29 сентября 2019</span>
 								</div>
 							</div>
@@ -86,7 +88,8 @@
 									<li>Оплата: наложенный платеж (при получении)</li>
 								</ul>
 								<div class="uk-flex uk-flex-between@s uk-flex-right@l uk-width-expand@s uk-width-1-3@l">
-									<button class="account__container-link" type="button">Написать отзыв</button>
+									<button class="account__container-link" type="button"
+										data-uk-toggle="target: #popupAddsReviews">Написать отзыв</button>
 									<span class="account__date">29 сентября 2019</span>
 								</div>
 							</div>
@@ -105,7 +108,8 @@
 									<li>Оплата: наложенный платеж (при получении)</li>
 								</ul>
 								<div class="uk-flex uk-flex-between@s uk-flex-right@l uk-width-expand@s uk-width-1-3@l">
-									<button class="account__container-link" type="button">Написать отзыв</button>
+									<button class="account__container-link" type="button"
+										data-uk-toggle="target: #popupAddsReviews">Написать отзыв</button>
 									<span class="account__date">29 сентября 2019</span>
 								</div>
 							</div>
