feature: changes styles menu sublist on desktope

--- a/src/reviews.html
+++ b/src/reviews.html
@@ -13,7 +13,8 @@
         <div class="uk-flex uk-flex-between uk-flex-middle">
           <h1 class="title title--medium">Отзывы о покупке</h1>
           <div class="uk-width-1-4@l">
-            <button type="button" class="btn reviews__btn-adds position-right@s" data-uk-toggle="target: #popupAddsReviews">Оставить отзыв</button>
+            <button type="button" class="btn reviews__btn-adds position-right@s"
+              data-uk-toggle="target: #popupAddsReviews">Оставить отзыв</button>
           </div>
         </div>
 
@@ -24,9 +25,9 @@
           <div class="uk-flex uk-flex-column uk-padding-left@s uk-padding-right@s uk-hidden@l">
             <span class="checkout__container-title">Отзывы о модели:</span>
             <select>
-              <option data-image="img/temp/reviews-model-1.jpg" value="8">Apple iPhone XS Max</option>
+              <option data-image="img/temp/all-model.svg" value="8">Все модели</option>
               <option data-image="img/temp/reviews-model-1.jpg" value="1">Apple iPhone XS Max</option>
-              <option value="2">Apple iPhone XS Max</option>
+              <option data-image="img/temp/header-sublist-2.jpg" value="2">Apple iPhone XS Max</option>
             </select>
           </div>
 
@@ -132,9 +133,9 @@
           <div class="uk-flex uk-flex-column uk-visible@l">
             <span class="checkout__container-title">Отзывы о модели:</span>
             <select>
-              <option data-image="img/temp/all-model.svg" value="8">Apple iPhone XS Max</option>
+              <option data-image="img/temp/all-model.svg" value="8">Все модели</option>
               <option data-image="img/temp/reviews-model-1.jpg" value="1">Apple iPhone XS Max</option>
-              <option value="2">Apple iPhone XS Max</option>
+              <option data-image="img/temp/header-sublist-2.jpg" value="2">Apple iPhone XS Max</option>
             </select>
           </div>
 
