--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-1.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -74,7 +74,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-2.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -99,7 +99,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-3.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -124,7 +124,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-4.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -149,7 +149,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-5.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -174,7 +174,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-6.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -199,7 +199,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-7.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -224,7 +224,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-8.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -284,7 +284,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-1.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -309,7 +309,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-2.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -334,7 +334,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-3.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -359,7 +359,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-4.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -400,7 +400,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-1.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -425,7 +425,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-2.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -450,7 +450,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-3.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
@@ -475,7 +475,7 @@
           <a href="#" class="product-card__image">
             <img src="img/temp/product-card-4.jpg" alt="">
           </a>
-          <span class="product-card__title">iPhone Xr 128GB Blue</span>
+          <a href="#" class="product-card__title">iPhone Xr 128GB Blue</a>
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
