feature: enter eddits

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -12,7 +12,7 @@
       <div class="contacts__header uk-flex uk-flex-between uk-flex-wrap">
         <h1 class="title title--medium">Контакты и адреса пунктов выдачи</h1>
         <div class="uk-flex uk-flex-middle uk-flex-wrap">
-          <label class="uk-margin-right">Сортировать</label>
+          <label class="uk-margin-right">Ваш город</label>
           <select>
             <option data-display="Санкт-Петербург">Санкт-Петербург</option>
             <option value="1">Москва</option>
