--- a/src/delivery.html
+++ b/src/delivery.html
@@ -2,9 +2,10 @@
 
 <body class="delivery">
   //= components/header.html
-  <div class="delivery__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
+  <div
+    class="delivery__wrapper uk-container bg-full-width--gradient uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="frame">
-      
+
       <ul class="breadcrumbs uk-subnav uk-subnav-divider uk-margin-medium-bottom">
         <li><a href="#">Главная</a></li>
         <li class="uk-active"><a href="#">Доставка и оплата</a></li>
