--- a/src/index.html
+++ b/src/index.html
@@ -53,10 +53,7 @@
           <div class="product-card__footer">
             <div class="product-card__footer-top uk-flex uk-flex-between uk-flex-middle">
               <div class="product-card__price">
-                <div class="uk-flex uk-flex-middle">
-                  <span class="product-card__price-old uk-margin-small-right">99990&nbsp;&#8381;</span>
-                  <span class="product-card__price-sale">-&nbsp;2000&nbsp;&#8381;</span>
-                </div>
+
                 <span class="product-card__price-total">97&nbsp;990&nbsp;&#8381;</span>
               </div>
               <a href="#" class="btn" data-uk-toggle="target: #popupCartAdd">В корзину</a>
@@ -249,7 +246,7 @@
 
   <!-- Banners -->
   <div
-    class="uk-container uk-child-width-1-2@l uk-flex uk-flex-column@x bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
+    class="uk-container uk-child-width-1-2@l uk-flex uk-flex-column@x bg-full-width uk-padding-medium-top@l uk-padding-medium-top@s">
     <!-- banner-1 -->
     <div class="banner banner--pink">
       <img src="img/pic/ico/banner-pink-title.svg" width="173" height="28" alt="">
