--- a/src/reviews.html
+++ b/src/reviews.html
@@ -40,43 +40,46 @@
                     <img src="img/temp/review-1.jpg" width="300" height="300" alt="">
                   </a>
                 </div>
-                <div class="uk-flex uk-flex-between uk-margin-small-bottom">
+                <div class="uk-flex uk-flex-between uk-margin-small-bottom uk-flex-middle">
                   <span>Валерий</span>
                   <span>iPhone X</span>
                 </div>
                 <span>18 сентября 2019</span>
               </div>
+
               <div class="swiper-slide">
                 <div class="uk-margin-small-bottom" uk-lightbox>
                   <a href="https://www.youtube.com/watch?v=c2pz2mlSfXA" data-caption="YouTube">
                     <img src="img/temp/review-2.jpg" width="300" height="300" alt="">
                   </a>
                 </div>
-                <div class="uk-flex uk-flex-between uk-margin-small-bottom">
+                <div class="uk-flex uk-flex-between uk-margin-small-bottom uk-flex-middle">
                   <span>Максим</span>
                   <span>iPhone XS</span>
                 </div>
                 <span>18 сентября 2019</span>
               </div>
+
               <div class="swiper-slide">
                 <div class="uk-margin-small-bottom" uk-lightbox>
                   <a href="https://www.youtube.com/watch?v=c2pz2mlSfXA" data-caption="YouTube">
                     <img src="img/temp/review-3.jpg" width="300" height="300" alt="">
                   </a>
                 </div>
-                <div class="uk-flex uk-flex-between uk-margin-small-bottom">
+                <div class="uk-flex uk-flex-between uk-margin-small-bottom uk-flex-middle">
                   <span>Карина</span>
                   <span>iPhone XS Max</span>
                 </div>
                 <span>18 сентября 2019</span>
               </div>
+
               <div class="swiper-slide">
                 <div class="uk-margin-small-bottom" uk-lightbox>
                   <a href="https://www.youtube.com/watch?v=c2pz2mlSfXA" data-caption="YouTube">
                     <img src="img/temp/review-3.jpg" width="300" height="300" alt="">
                   </a>
                 </div>
-                <div class="uk-flex uk-flex-between uk-margin-small-bottom">
+                <div class="uk-flex uk-flex-between uk-margin-small-bottom uk-flex-middle">
                   <span>Валерий</span>
                   <span>iPhone X</span>
                 </div>
